# credit-scoring-mlflow

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
models/: best_model_xgb.pkl  model_project_8_xgb.joblib
notebooks/: 00_project_8.ipynb  00_project_8_updated.ipynb  01_data_preparation.ipynb  01_preparation_donnees.ipynb  02_experimentations_mlflow.ipynb  02_mlflow_experiments.ipynb  03_model_comparison.ipynb  03_modele_algorithmique.ipynb  04_hyperparameter_optimization.ipynb
notebooks/.ipynb_checkpoints/: 00_project_8-checkpoint.ipynb  00_project_8_updated-checkpoint.ipynb  00_test-checkpoint.ipynb  01_preparation_donnees-checkpoint.ipynb  01_preparation_donnees_encoded-checkpoint.ipynb  02_experimentations_mlflow-checkpoint.ipynb  03_modele_algorithmique-checkpoint.ipynb  04_optimisation_hyperparametres-checkpoint.ipynb
src/: download_model.py  train.py
