[project]
name = "projet6-credit-scoring"
version = "0.1.0"
description = "Scoring crédit - Projet 6 OpenClassrooms"
authors = [
    {name = "David Worsley-Tonks", email = "david.worsley.tonks@gmail.com"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel",
    "xgboost",
    "catboost",
    "shap",
    "scipy",
    "ipywidgets",
    "scikit-learn==1.3.2",
    "imbalanced-learn==0.11.0",
    "numpy==1.26.4",
    "cython==0.29.36",
    "mlflow"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"