[project]
name = "credit-scoring-mlflow"
version = "0.1.0"
description = "Credit scoring workflow with MLflow experiment tracking"
authors = [
    {name = "David Worsley-Tonks", email = "hello@sparkup.dev"}
]
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core data stack
    "pandas",
    "numpy==1.26.4",
    "scipy",
    "matplotlib",
    "seaborn",
    "missingno",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    # Modeling
    "xgboost",
    "catboost",
    "lightgbm",
    "scikit-learn==1.3.2",
    "imbalanced-learn==0.11.0",
    # Explainability
    "shap",
    # MLflow tracking
    "mlflow==3.1.1",
    "sqlalchemy",
    # Experiment optimization
    "optuna",
    # Utilities
    "cython==0.29.36",
    "gunicorn",
    "pyyaml",
    "huggingface_hub"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
